# video-processing-job-service

./: .gitignore  AGENTS.md  Dockerfile  Makefile  pyproject.toml
data/test/input/: test_clip_1.mkv
src/: cli.py  job_runner.py  models.py
test/unit/: test__job_runner.py
