[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ffmpeg-service"
version = "0.1.0"
requires-python = ">=3.10"
description = "FFMPEG service for video frame extraction"
authors = [
    {name = "Nelson", email = "nelson@example.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.38.0,<2.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.1",
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx",
    "pre-commit>=3.0.0",
]

[tool.uv]
package = false

[tool.ty.src]
include = ["src", "test"]
exclude = [".venv"]

[tool.ty.rules]
all = "warn"

[pytest]
pythonpath = ["src"]
